# streamlit_jsonschema_ui

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: main.py
src/streamlit_jsonschema_ui/: __init__.py  component.py
src/streamlit_jsonschema_ui/frontend/: index.html  package-lock.json  package.json  vite.config.mts
src/streamlit_jsonschema_ui/frontend/src/: App.vue  JsonSchemaComponent.vue  main.ts
