[project]
name = "streamlit-jsonschema-ui"
version = "0.1.0"
description = "A Streamlit component for JSON Schema UI using Vue.js and Vuetify"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9.1"
keywords = ["streamlit", "json-schema", "ui", "component", "vue"]
authors = [
    {name = "streamlit-jsonschema-ui", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "streamlit>=1.47.0",
]

[project.urls]
Homepage = "https://github.com/find-partner/streamlit_jsonschema_ui"
Repository = "https://github.com/find-partner/streamlit_jsonschema_ui"
Issues = "https://github.com/find-partner/streamlit_jsonschema_ui/issues"

[project.optional-dependencies]
dev = [
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88


