[project]
name = "streamlit-jsonschema-ui"
dynamic = ["version"]
description = "A Streamlit component for JSON Schema UI using Vue.js and Vuetify"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9.1"
keywords = ["streamlit", "json-schema", "ui", "component", "vue"]
authors = [
    {name = "streamlit-jsonschema-ui", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "streamlit>=1.47.0",
]

[project.urls]
Homepage = "https://github.com/find-partner/streamlit_jsonschema_ui"
Repository = "https://github.com/find-partner/streamlit_jsonschema_ui"
Issues = "https://github.com/find-partner/streamlit_jsonschema_ui/issues"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "setuptools-scm>=8.3.1",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-scm>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "streamlit_jsonschema_ui._version.version"}

[tool.setuptools_scm]
version_file = "src/streamlit_jsonschema_ui/_version.py"